--- a/pingpung/ppui/tab.ui
+++ b/pingpung/ppui/tab.ui
@@ -20,13 +20,25 @@
       <widget class="QLineEdit" name="session_line"/>
      </item>
      <item row="1" column="3">
-      <widget class="QLineEdit" name="interval_line"/>
+      <widget class="QLineEdit" name="interval_line">
+       <property name="text">
+        <string>1</string>
+       </property>
+      </widget>
      </item>
      <item row="1" column="2">
-      <widget class="QLineEdit" name="ping_count_line"/>
+      <widget class="QLineEdit" name="ping_count_line">
+       <property name="text">
+        <string>5</string>
+       </property>
+      </widget>
      </item>
      <item row="1" column="0">
-      <widget class="QLineEdit" name="ip_line"/>
+      <widget class="QLineEdit" name="ip_line">
+       <property name="text">
+        <string>127.0.0.1</string>
+       </property>
+      </widget>
      </item>
      <item row="1" column="4">
       <widget class="QPushButton" name="toggle_start">
@@ -118,7 +130,7 @@
       </widget>
      </item>
      <item row="2" column="0" rowspan="2" colspan="4">
-      <widget class="QTextEdit" name="textEdit"/>
+      <widget class="QTextEdit" name="output_textedit"/>
      </item>
      <item row="0" column="1">
       <widget class="QLabel" name="label">
