--- a/pingpung/ppui/tab.ui
+++ b/pingpung/ppui/tab.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>777</width>
-    <height>631</height>
+    <width>891</width>
+    <height>649</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -55,7 +55,7 @@
       </widget>
      </item>
      <item row="2" column="4">
-      <widget class="QTableWidget" name="tableWidget">
+      <widget class="QTableWidget" name="stats_table">
        <property name="alternatingRowColors">
         <bool>true</bool>
        </property>
@@ -94,6 +94,36 @@
        <row/>
        <column/>
        <column/>
+       <item row="0" column="0">
+        <property name="text">
+         <string/>
+        </property>
+       </item>
+       <item row="1" column="0">
+        <property name="text">
+         <string/>
+        </property>
+       </item>
+       <item row="2" column="0">
+        <property name="text">
+         <string/>
+        </property>
+       </item>
+       <item row="4" column="0">
+        <property name="text">
+         <string/>
+        </property>
+       </item>
+       <item row="5" column="0">
+        <property name="text">
+         <string/>
+        </property>
+       </item>
+       <item row="6" column="0">
+        <property name="text">
+         <string/>
+        </property>
+       </item>
       </widget>
      </item>
      <item row="3" column="4">
