--- a/pingpung/ppui/pptab.ui
+++ b/pingpung/ppui/pptab.ui
@@ -16,6 +16,13 @@
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
     <layout class="QGridLayout" name="gridLayout">
+     <item row="4" column="4">
+      <widget class="QPushButton" name="clear_log_button">
+       <property name="text">
+        <string>Clear Log</string>
+       </property>
+      </widget>
+     </item>
      <item row="1" column="1">
       <widget class="QLineEdit" name="session_line"/>
      </item>
@@ -29,7 +36,7 @@
      <item row="1" column="2">
       <widget class="QLineEdit" name="ping_count_line">
        <property name="text">
-        <string>5</string>
+        <string>0</string>
        </property>
       </widget>
      </item>
@@ -40,13 +47,6 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="4">
-      <widget class="QPushButton" name="toggle_start">
-       <property name="text">
-        <string>Start</string>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="0">
       <widget class="QLabel" name="ip_line_label">
        <property name="text">
@@ -54,7 +54,35 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="4">
+     <item row="0" column="1">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Session Label</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Ping Count</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="3">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Interval</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="5">
+      <widget class="QPushButton" name="save_log_button">
+       <property name="text">
+        <string>Save Log</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="4" colspan="2">
       <widget class="QTableWidget" name="stats_table">
        <property name="alternatingRowColors">
         <bool>true</bool>
@@ -126,7 +154,7 @@
        </item>
       </widget>
      </item>
-     <item row="3" column="4">
+     <item row="3" column="4" colspan="2">
       <widget class="QGroupBox" name="groupBox">
        <property name="title">
         <string>GroupBox</string>
@@ -159,29 +187,21 @@
        </layout>
       </widget>
      </item>
-     <item row="2" column="0" rowspan="2" colspan="4">
+     <item row="1" column="4" colspan="2">
+      <widget class="QPushButton" name="toggle_start">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Start</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0" rowspan="3" colspan="4">
       <widget class="QTextEdit" name="output_textedit"/>
-     </item>
-     <item row="0" column="1">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Session Label</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="2">
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>Ping Count</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="3">
-      <widget class="QLabel" name="label_3">
-       <property name="text">
-        <string>Interval</string>
-       </property>
-      </widget>
      </item>
     </layout>
    </item>
