--- a/pingpung/ppui/maingui.ui
+++ b/pingpung/ppui/maingui.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>PingPung</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../data/icon.ico</normaloff>../data/icon.ico</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
@@ -44,12 +48,13 @@
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
-     <string>File</string>
+     <string>&amp;File</string>
     </property>
+    <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
-     <string>Help</string>
+     <string>&amp;Help</string>
     </property>
     <addaction name="actionAbout_PingPung"/>
    </widget>
@@ -60,6 +65,17 @@
   <action name="actionAbout_PingPung">
    <property name="text">
     <string>About PingPung</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+A</string>
+   </property>
+  </action>
+  <action name="actionExit">
+   <property name="text">
+    <string>&amp;Exit</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
    </property>
   </action>
  </widget>
