--- a/pingpung/ppui/pptab.ui
+++ b/pingpung/ppui/pptab.ui
@@ -52,6 +52,9 @@
        <property name="alternatingRowColors">
         <bool>true</bool>
        </property>
+       <property name="selectionMode">
+        <enum>QAbstractItemView::MultiSelection</enum>
+       </property>
        <property name="rowCount">
         <number>12</number>
        </property>
