--- a/pingpung/ppui/pptab.ui
+++ b/pingpung/ppui/pptab.ui
@@ -16,13 +16,23 @@
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
     <layout class="QGridLayout" name="gridLayout">
-     <item row="2" column="0" rowspan="4" colspan="4">
-      <widget class="QTextEdit" name="output_textedit">
-       <property name="undoRedoEnabled">
-        <bool>false</bool>
+     <item row="0" column="1">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Session Label</string>
        </property>
-       <property name="readOnly">
-        <bool>true</bool>
+      </widget>
+     </item>
+     <item row="1" column="5" colspan="2">
+      <widget class="QPushButton" name="toggle_start">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Start</string>
        </property>
       </widget>
      </item>
@@ -30,13 +40,6 @@
       <widget class="QLabel" name="ip_line_label">
        <property name="text">
         <string>IP or Domain Name</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Session Label</string>
        </property>
       </widget>
      </item>
@@ -54,7 +57,7 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="4" colspan="2">
+     <item row="2" column="5" colspan="2">
       <widget class="QTableWidget" name="stats_table">
        <property name="alternatingRowColors">
         <bool>true</bool>
@@ -129,7 +132,7 @@
        </item>
       </widget>
      </item>
-     <item row="4" column="4" colspan="2">
+     <item row="4" column="5" colspan="2">
       <widget class="QGroupBox" name="audio_options">
        <property name="title">
         <string>Audio Options</string>
@@ -162,19 +165,6 @@
        </layout>
       </widget>
      </item>
-     <item row="1" column="4" colspan="2">
-      <widget class="QPushButton" name="toggle_start">
-       <property name="font">
-        <font>
-         <weight>75</weight>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string>Start</string>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="1">
       <widget class="QLineEdit" name="session_line"/>
      </item>
@@ -199,17 +189,34 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="4">
+     <item row="3" column="5">
       <widget class="QPushButton" name="clear_log_button">
        <property name="text">
         <string>Clear Log</string>
        </property>
       </widget>
      </item>
-     <item row="3" column="5">
+     <item row="3" column="6">
       <widget class="QPushButton" name="save_log_button">
        <property name="text">
         <string>Save Log</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="4">
+      <widget class="QLineEdit" name="packet_size_line">
+       <property name="text">
+        <string>56</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0" rowspan="4" colspan="5">
+      <widget class="QTextEdit" name="output_textedit"/>
+     </item>
+     <item row="0" column="4">
+      <widget class="QLabel" name="packet_size_label">
+       <property name="text">
+        <string>Packet Size (Bytes)</string>
        </property>
       </widget>
      </item>
@@ -217,20 +224,6 @@
    </item>
   </layout>
  </widget>
- <tabstops>
-  <tabstop>ip_line</tabstop>
-  <tabstop>session_line</tabstop>
-  <tabstop>ping_count_line</tabstop>
-  <tabstop>interval_line</tabstop>
-  <tabstop>toggle_start</tabstop>
-  <tabstop>stats_table</tabstop>
-  <tabstop>clear_log_button</tabstop>
-  <tabstop>save_log_button</tabstop>
-  <tabstop>toggle_audio</tabstop>
-  <tabstop>alert_success</tabstop>
-  <tabstop>alert_failure</tabstop>
-  <tabstop>output_textedit</tabstop>
- </tabstops>
  <resources/>
  <connections/>
 </ui>
