--- a/pingpung/ppui/pptab.ui
+++ b/pingpung/ppui/pptab.ui
@@ -46,7 +46,7 @@
      <item row="0" column="2">
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>Ping Count</string>
+        <string>Ping Count (0=infinite)</string>
        </property>
       </widget>
      </item>
@@ -57,13 +57,16 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="5" colspan="2">
+     <item row="3" column="5" colspan="2">
       <widget class="QTableWidget" name="stats_table">
        <property name="alternatingRowColors">
         <bool>true</bool>
        </property>
        <property name="selectionMode">
-        <enum>QAbstractItemView::MultiSelection</enum>
+        <enum>QAbstractItemView::ExtendedSelection</enum>
+       </property>
+       <property name="selectionBehavior">
+        <enum>QAbstractItemView::SelectRows</enum>
        </property>
        <property name="rowCount">
         <number>12</number>
@@ -132,7 +135,7 @@
        </item>
       </widget>
      </item>
-     <item row="4" column="5" colspan="2">
+     <item row="6" column="5" colspan="2">
       <widget class="QGroupBox" name="audio_options">
        <property name="title">
         <string>Audio Options</string>
@@ -189,20 +192,6 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="5">
-      <widget class="QPushButton" name="clear_log_button">
-       <property name="text">
-        <string>Clear Log</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="6">
-      <widget class="QPushButton" name="save_log_button">
-       <property name="text">
-        <string>Save Log</string>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="4">
       <widget class="QLineEdit" name="packet_size_line">
        <property name="text">
@@ -210,15 +199,43 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="0" rowspan="4" colspan="5">
-      <widget class="QTextEdit" name="output_textedit"/>
-     </item>
      <item row="0" column="4">
       <widget class="QLabel" name="packet_size_label">
        <property name="text">
         <string>Packet Size (Bytes)</string>
        </property>
       </widget>
+     </item>
+     <item row="5" column="6">
+      <widget class="QPushButton" name="copy_stats_button">
+       <property name="text">
+        <string>Copy To Clipboard</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="5">
+      <widget class="QPushButton" name="send_stats_button">
+       <property name="text">
+        <string>&lt;&lt; Send Stats</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="5">
+      <widget class="QPushButton" name="clear_log_button">
+       <property name="text">
+        <string>Clear Log</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="6">
+      <widget class="QPushButton" name="save_log_button">
+       <property name="text">
+        <string>Save Log</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0" rowspan="6" colspan="5">
+      <widget class="QTextEdit" name="output_textedit"/>
      </item>
     </layout>
    </item>
@@ -231,8 +248,6 @@
   <tabstop>interval_line</tabstop>
   <tabstop>toggle_start</tabstop>
   <tabstop>stats_table</tabstop>
-  <tabstop>clear_log_button</tabstop>
-  <tabstop>save_log_button</tabstop>
   <tabstop>toggle_audio</tabstop>
   <tabstop>alert_success</tabstop>
   <tabstop>alert_failure</tabstop>
