minor fixes and cleanups for release

--- a/pingpung/ppui/about.ui
+++ b/pingpung/ppui/about.ui
@@ -120,6 +120,9 @@
       <property name="frameShape">
        <enum>QFrame::NoFrame</enum>
       </property>
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
       <property name="plainText">
        <string>Python3/PyGtk4 multiplatform, multithreaded graphical ping application.  
 
