I think I finally got past my packaging problems.  If everything checks out in Linux, I should be ready for alpha.  For real this time.

--- a/pingpung/ppui/pptab.ui
+++ b/pingpung/ppui/pptab.ui
@@ -246,8 +246,13 @@
   <tabstop>session_line</tabstop>
   <tabstop>ping_count_line</tabstop>
   <tabstop>interval_line</tabstop>
+  <tabstop>packet_size_line</tabstop>
   <tabstop>toggle_start</tabstop>
+  <tabstop>clear_log_button</tabstop>
+  <tabstop>save_log_button</tabstop>
   <tabstop>stats_table</tabstop>
+  <tabstop>send_stats_button</tabstop>
+  <tabstop>copy_stats_button</tabstop>
   <tabstop>toggle_audio</tabstop>
   <tabstop>alert_success</tabstop>
   <tabstop>alert_failure</tabstop>
